<resources>
    <string name="app_name">Help The Needy</string>
    <string name="welcome">Welcome</string>
    <string name="text_login_info">Please login or sign up to continue using our app</string>
    <string name="user">user name</string>
    <string name="Email">Email</string>
    <string name="Password">password</string>
    <string name="Address">Address</string>
    <string name="login">login</string>
    <string name="sign">sign up</string>
    <string name="remember_save">Remember me</string>
    <string name="no_account">Don"'"t have an account</string>
    <string name="sign_text">Sign Up</string>
    <string name="text_sign_info">Please sign up to enter in a app</string>
    <string name="org">Organization</string>
    <string name="donator">Donator</string>
    <string name="login2">login</string>
    <string name="account">Already have an account</string>
    <string name="title_activity_home_page">homePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--<string name="nav_header_title">dainy patel</string>-->
    <string name="nav_header_name">dainy patel</string>
    <!--<string name="nav_header_subtitle">help.needy@gmail.com</string>-->
    <string name="nav_header_gmail">help.needy@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">home</string>
    <string name="menu_history">history</string>
    <string name="menu_gallery">Nearby NGOs</string>
    <string name="menu_slideshow">logout</string>
    <string name="register_radio1">Organization</string>
    <string name="register_radio2">Donator</string>
    <string-array name="cities">
        <item>Bhopal</item>
        <item>Gwalior</item>
        <item>Guwahati</item>
        <item>Mumbai</item>
        <item>Indore</item>
        <item>Delhi</item>
        <item>Ujjain</item>
    </string-array>
    <string name="splash">A SMALL DONATION BECOMES A LOT</string>
    <string name="Food_Items">Food Items Details</string>
    <string name="Food_Quantity">food quantity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="your_donate">Hello Your Donate Items Details </string>
    <string name="other_donate">Hello other Donate Items Details  </string>
</resources>